# mail-customer-support-agent

./: README.md  docker-compose.yml  main.py  pyproject.toml
agent-backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
agent-backend/data/: evaluation_dataset.json
agent-backend/src/: config.py  utils.py
agent-backend/src/application/: generate_response.py
agent-backend/src/application/evaluation/: evaluate.py  upload_dataset.py
agent-backend/src/application/workflow/: chains.py  edges.py  graph.py  nodes.py  state.py  tools.py
agent-backend/src/domain/: prompt.py
agent-backend/src/infrastructure/: api.py  opik_utils.py  postgreDb.py
agent-backend/tools/: evaluate_agent.py
agent-ui/: Dockerfile  app.py  index.html  style.css
agent-ui/src/: main.js
agent-ui/src/services/: ApiService.js
src/application/workflow/: graph.py  nodes.py  state.py
src/domain/: __init__.py  prompt.py
