[project]
name = "mail-customer-service-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.2",
    "opik>=1.9.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]
